src/objects/Venue__c.object
<CustomObject>
    <description>Live! Event venues</description>
    <fields>
        <fullName>Base_URL__c</fullName>
        <label>Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Controller__c</fullName>
        <label>Integration Controller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Show_in_Dashboard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show in Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Body__c</fullName>
        <label>HTML Site Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_3__c</fullName>
        <label>Street 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virtual_Instructions__c</fullName>
        <label>Virtual Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Venue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Phone__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Website_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Venue__c.Virtual</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Simple HTML Redirect,Slido</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <recordTypes>
        <fullName>Physical</fullName>
        <active>true</active>
        <label>Physical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Virtual</fullName>
        <active>true</active>
        <label>Virtual</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_State</fullName>
        <active>true</active>
        <description>Require state if country is US or Canada</description>
        <errorConditionFormula>AND(State__c == null, OR(CONTAINS(Country__c, &apos;United States&apos;),Country__c == &apos;US&apos;,Country__c == &apos;Canada&apos;, Country__c=&apos;CA&apos;))</errorConditionFormula>
        <errorMessage>State is required.</errorMessage>
    </validationRules>
</CustomObject>